Extract Swagger definitions to separate files
