# app/Http/Controllers/Catalogue/EntriesController.php
@@ -25,37 +25,6 @@ use App\Repositories\Interfaces\EntryRepositoryInterface as EntryRepository;
 use App\Repositories\Interfaces\StatusRepositoryInterface as StatusRepository;
 use App\Repositories\Interfaces\CategoriesRepositoryInterface as CategoriesRepository;
 
-/**
- * @OA\Info(
- *      version="1.0.11",
- *      title="Architecture Catalogue API Documentation",
- *      description="L5 Swagger OpenApi description",
- *      @OA\Contact(
- *          email="ea-team@ea.finance-ni.gov.uk"
- *      ),
- *      @OA\License(
- *          name="Apache 2.0",
- *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
- *      )
- * )
- *
- * @OA\Server(
- *      url=L5_SWAGGER_CONST_HOST,
- *      description="Demo API Server"
- * )
- *
- * @OA\Tag(
- *     name="Architecture Catalogue",
- *     description="API Endpoints of Architecture Catalogue"
- * )
- *
- * @OA\SecurityScheme(
- *      securityScheme="Personal Access Token",
- *      scheme="bearer",
- *      type="http"
- * )
- */
-
 class EntriesController extends Controller
 {
     protected $entryRepository;
@@ -71,30 +40,6 @@ class EntriesController extends Controller
         $this->statusRepository = $statusRepository;
         $this->categoriesRepository = $categoriesRepository;
     }
-
-    /**
-     * @OA\Get(
-     *      path="/entries",
-     *      operationId="getEntriesList",
-     *      tags={"Entries"},
-     *      summary="Returns a list of catalogue entries",
-     *      description="Returns a list of catalogue entries",
-     *      security={{"Personal Access Token" : {}}},
-     *      @OA\Response(
-     *          response=200,
-     *          description="Successful operation",
-     *          @OA\JsonContent(ref="#/components/schemas/EntryResource")
-     *      ),
-     *      @OA\Response(
-     *          response=401,
-     *          description="Unauthenticated",
-     *      ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
-     *     )
-     */
 
     /**
      * Display a listing of the resource.
@@ -204,47 +149,6 @@ class EntriesController extends Controller
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
-
-     /**
-      * @OA\Get(
-      *      path="/entries/{id}",
-      *      operationId="getEntryById",
-      *      tags={"Entries"},
-      *      summary="Returns a catalogue entry",
-      *      description="Returns catalogue entry data",
-      *      security={{"Personal Access Token" : {}}},
-      *      @OA\Parameter(
-      *          name="id",
-      *          description="Entry id",
-      *          required=true,
-      *          in="path",
-      *          @OA\Schema(
-      *              type="integer"
-      *          )
-      *      ),
-      *      @OA\Response(
-      *          response=200,
-      *          description="Successful operation",
-      *          @OA\JsonContent(ref="#/components/schemas/EntriesResource")
-      *       ),
-      *      @OA\Response(
-      *          response=400,
-      *          description="Bad Request"
-      *      ),
-      *      @OA\Response(
-      *          response=401,
-      *          description="Unauthenticated",
-      *      ),
-      *      @OA\Response(
-      *          response=403,
-      *          description="Forbidden"
-      *      ),
-      *      @OA\Response(
-      *          response=404,
-      *          description="Entry does not exist"
-      *      )
-      * )
-      */
 
     public function show(Request $request, $id)
     {
