# storage/api-docs/api-docs.json
@@ -1,8 +1,8 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Architecture Catalogue API Documentation",
-        "description": "L5 Swagger OpenApi description",
+        "title": "Architecture Catalogue",
+        "description": "Architecture Catalogue API with read only access to catalogue entries",
         "contact": {
             "email": "ea-team@ea.finance-ni.gov.uk"
         },
@@ -14,8 +14,8 @@
     },
     "servers": [
         {
-            "url": "https://architecture-catalogue.test/api/v1",
-            "description": "Demo API Server"
+            "url": "https://architecture-catalogue-sandbox.london.cloudapps.digital/api/v1",
+            "description": "Sandbox server (uses test data)"
         }
     ],
     "paths": {
@@ -33,7 +33,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/EntryResource"
+                                    "$ref": "#/components/schemas/EntriesResource"
                                 }
                             }
                         }
@@ -47,7 +47,7 @@
                 },
                 "security": [
                     {
-                        "Personal Access Token": []
+                        "API Token": []
                     }
                 ]
             }
@@ -77,7 +77,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/EntriesResource"
+                                    "$ref": "#/components/schemas/EntryResource"
                                 }
                             }
                         }
@@ -97,7 +97,7 @@
                 },
                 "security": [
                     {
-                        "Personal Access Token": []
+                        "API Token": []
                     }
                 ]
             }
@@ -134,34 +134,6 @@
                 "type": "object",
                 "xml": {
                     "name": "EntriesResource"
-                }
-            },
-            "EntryResource": {
-                "title": "EntryResource",
-                "description": "Entry resource",
-                "properties": {
-                    "href": {
-                        "title": "href",
-                        "description": "Resource URL",
-                        "type": "string",
-                        "example": "https://arhitecture-catalogue.test/api/v1/entries/1"
-                    },
-                    "timestamp": {
-                        "title": "TimeStamp",
-                        "description": "TimeStamp",
-                        "type": "string",
-                        "format": "datetime",
-                        "example": "2020-01-27 17:50:45"
-                    },
-                    "entry": {
-                        "title": "Entry",
-                        "description": "Architecture Catalogue Entry",
-                        "$ref": "#/components/schemas/Entry"
-                    }
-                },
-                "type": "object",
-                "xml": {
-                    "name": "EntryResource"
                 }
             },
             "Entry": {
@@ -260,12 +232,41 @@
                 "xml": {
                     "name": "Entry"
                 }
+            },
+            "EntryResource": {
+                "title": "EntryResource",
+                "description": "Entry resource",
+                "properties": {
+                    "href": {
+                        "title": "href",
+                        "description": "Resource URL",
+                        "type": "string",
+                        "example": "https://arhitecture-catalogue.test/api/v1/entries/1"
+                    },
+                    "timestamp": {
+                        "title": "TimeStamp",
+                        "description": "TimeStamp",
+                        "type": "string",
+                        "format": "datetime",
+                        "example": "2020-01-27 17:50:45"
+                    },
+                    "entry": {
+                        "title": "Entry",
+                        "description": "Architecture Catalogue Entry",
+                        "$ref": "#/components/schemas/Entry"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "EntryResource"
+                }
             }
         },
         "securitySchemes": {
-            "Personal Access Token": {
-                "type": "http",
-                "scheme": "bearer"
+            "API Token": {
+                "type": "apiKey",
+                "name": "x-api-key",
+                "in": "header"
             }
         }
     },
